# stdout-sample

./: .gitignore  CMakeLists.txt  README.md
json-consumer/: CMakeLists.txt  json-consumer.cpp  json-consumer.h
json-gen/: CMakeLists.txt  json-gen.cpp  json-gen.h  win-wrapper.cpp  win-wrapper.h
